# quotarouter

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  PROJECT_STRUCTURE.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/instructions/: core-instructions.md
.github/workflows/: publish.yml  tests.yml
docs/: API.md  API_SERVER.md  API_SERVER_IMPLEMENTATION.md  ARCHITECTURE.md  AUTOPILOT_AGENT.md  CLI_ARCHITECTURE.md  GETTING_STARTED.md  PROJECT_STRUCTURE.md  QWEN_INTEGRATION_COMPLETE.md  QWEN_MCP_INTEGRATION.md
examples/: 01_basic_completion.py  02_streaming.py  03_conversation.py  04_status.py  05_custom_provider.py  06_alibaba_test.py  07_chainlit_integration.py  07_cli_usage.py  07_streamlit_integration.py  08_api_integration.py  08_qwen_mcp_integration.py  09_autopilot_agent.py  README.md
src/freerouter/: __init__.py
src/freerouter/config/: __init__.py
src/freerouter/core/: router.py  types.py
src/freerouter/storage/: __init__.py  quota_manager.py
src/quotarouter/: __init__.py  __main__.py  cli.py
src/quotarouter/agents/: __init__.py  autonomous.py  autopilot.py  qwen_agent.py
src/quotarouter/api/: __init__.py  models.py  server.py
src/quotarouter/cli/: __init__.py  qwen_integration.py
src/quotarouter/cli/commands/: __init__.py  agent.py  api.py  book.py  chat.py  complete.py  config.py  qwen_command.py  reset.py  status.py  stream.py
src/quotarouter/cli/utils/: __init__.py  errors.py
src/quotarouter/config/: qwen_config.py  registry.py
src/quotarouter/core/: __init__.py  router.py
src/quotarouter/mcp/: __init__.py  qwen_code_server.py
src/quotarouter/providers/: __init__.py  openai_compatible.py
src/quotarouter/storage/: quota_manager.py
tests/: __init__.py  test_core.py
