[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quotarouter"
version = "0.4.0"
description = "Quota-aware LLM routing engine with automatic provider fallback"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Landry Simo", email = "landrysimo99@gmail.com"},
]
license = {text = "MIT"}
keywords = ["llm", "routing", "quota", "free-tier", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "openai>=1.3.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "isort>=5.0",
]
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
]
streamlit = [
    "streamlit>=1.28.0",
    "requests>=2.31.0",
]
all = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "isort>=5.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "streamlit>=1.28.0",
    "requests>=2.31.0",
]

[project.scripts]
quotarouter = "quotarouter.cli:app"

[project.urls]
Homepage = "https://github.com/Starland9/quotarouter"
Documentation = "https://github.com/Starland9/quotarouter#readme"
Repository = "https://github.com/Starland9/quotarouter.git"
Issues = "https://github.com/Starland9/quotarouter/issues"

[tool.setuptools]
packages = { find = { where = ["src"] } }
package-dir = {"" = "src"}

[tool.setuptools.package-data]
quotarouter = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["*/migrations/*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
